Tab crashes on Print Preview exit on deviantart.com
Categories
(Core :: Print Preview, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox73 | --- | unaffected |
| firefox74 | + | verified |
| firefox75 | + | verified |
People
(Reporter: asoncutean, Assigned: emilio)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(2 files)
|
104.27 KB,
image/png
|
Details | |
|
47 bytes,
text/x-phabricator-request
|
pascalc|PTO
:
approval-mozilla-beta+
|
Details | Review |
[Affected versions]:
- Fx 75.0a1 (2020-02-13)
[Affected platforms]:
- Ubuntu 18.04
- Windows 10
[Steps to reproduce]:
- Open https://www.deviantart.com/annewipf/art/Spring-798759311
- Enter in Print Preview
- Exit Print Preview
[Expected result]:
- No issue is triggered by closing the Print Preview
[Actual result]:
- Tab crashes
[Regression range]:
- Not reproducible with Fx 74 (2020-01-27); looks like a recent regression, I will provide more conclusive details asap.
[Additional notes]:
- No other page from devianart.com, that i’ve tried, crashed
- With the link provided in steps reproducibility is 100%
Comment 1•6 years ago
|
||
Comment 2•6 years ago
|
||
[Tracking Requested - why for this release]: crash after exit print-priview
STR:
- Open https://www.deviantart.com/annewipf/art/Spring-798759311
- Enter in Print Preview
- Exit Print Preview
- If not crash, Resize browser
Actual results.
Tab immediately crash. OR sometimes content area is no longer resized and finally tab crash.
Regression Window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=fa233e2c081b14a5589f65e72769a259e0ad4fad&tochange=e3382fdd4f543e1177ba3b0f080d90905cdeb22f
| Assignee | ||
Comment 3•6 years ago
|
||
Probably a pre-existing issue, just caught by that assert.
| Assignee | ||
Comment 4•6 years ago
|
||
It's not clear to me this ever worked before either, I don't think the logic
before my patch was sound before.
But oh well. This should work, gotta add a test for it.
| Assignee | ||
Updated•6 years ago
|
Updated•6 years ago
|
Comment 5•6 years ago
|
||
Hello, the regressed build_date sets the bug in 2020-02-07, within version 74.0a1. I'll set the firefox74 flag to affected.
If the patch isn't risky, we could uplift it to beta as this is a new 74 regression.
Comment 7•6 years ago
|
||
Changing the priority to p1 as the bug is tracked by a release manager for the current beta.
See What Do You Triage for more information
Comment 9•6 years ago
|
||
| bugherder | ||
Comment 10•6 years ago
|
||
Please nominate this for Beta uplift when you're comfortable doing so.
| Assignee | ||
Comment 11•6 years ago
|
||
Comment on attachment 9126477 [details]
Bug 1615261 - Fix ImageLoader setup for animated images in print preview. r=tnikkel
Beta/Release Uplift Approval Request
- User impact if declined: Crashes in print preview in non-release builds. Potential badness in release.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: comment 0
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Simple patch that fixes the recently introduced setup for style images for animated images.
- String changes made/needed: none
| Assignee | ||
Updated•6 years ago
|
Comment on attachment 9126477 [details]
Bug 1615261 - Fix ImageLoader setup for animated images in print preview. r=tnikkel
Crash fix, 74 regression, uplift approved for beta, thanks.
Comment 13•6 years ago
|
||
| bugherder uplift | ||
Updated•6 years ago
|
Updated•6 years ago
|
| Reporter | ||
Comment 14•6 years ago
|
||
I can no longer reproduce this crash with Fx 74.0b4 and Fx 75.0a1 (2020-02-16) with Windows 10 x64 and Ubuntu 18.04 x64.
Description
•