Bug 1615261 - Fix ImageLoader setup for animated images in print preview. r=tnikkel a=pascalc

It's not clear to me this ever worked before either, I don't think the logic
before my patch was sound before.

But oh well. This should work, gotta add a test for it.

Differential Revision: https://phabricator.services.mozilla.com/D62777